Add shared format module

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -139,6 +139,7 @@
         "--verbose",
         "--coverage",
         "--maxWorkers=100%",
+        "src/devices/airConditioner.test.ts",
         "src/devices/base.test.ts",
         "src/devices/batteryStorage.test.ts",
         "src/devices/cooktop.test.ts",
@@ -153,9 +154,8 @@
         "src/devices/refrigerator.test.ts",
         "src/devices/roboticVacuumCleaner.test.ts",
         "src/devices/solarPower.test.ts",
-        "src/devices/waterHeater.test.ts",
         "src/devices/speaker.test.ts",
-        "src/devices/airConditioner.test.ts",
+        "src/devices/waterHeater.test.ts",
       ],
       "group": {
         "kind": "test",
@@ -257,23 +257,28 @@
         "--verbose",
         "--coverage",
         "--maxWorkers=100%",
-        "utils.test.ts",
-        "wait.test.ts",
-        "spawn.test.ts",
-        "update.test.ts",
-        "network.test.ts",
-        "copyDirectory.test.ts",
-        "createDirectory.test.ts",
-        "createZip.mocked.test.ts",
-        "createZip.real.test.ts",
-        "deepCopy.test.ts",
-        "deepEqual.test.ts",
-        "error.test.ts",
-        "hex.test.ts",
-        "isvalid.test.ts",
-        "network.test.ts",
-        "network.update.test.ts",
-        "network.version.test.ts",
+        "src/utils/colorUtils.test.ts",
+        "src/utils/commandLine.test.ts",
+        "src/utils/copyDirectory.test.ts",
+        "src/utils/createDirectory.test.ts",
+        "src/utils/createZip.mocked.test.ts",
+        "src/utils/createZip.real.test.ts",
+        "src/utils/deepCopy.test.ts",
+        "src/utils/deepEqual.test.ts",
+        "src/utils/spawn.test.ts",
+        "src/utils/update.test.ts",
+        "src/utils/error.test.ts",
+        "src/utils/format.test.ts",
+        "src/utils/hex.test.ts",
+        "src/utils/inspector.test.ts",
+        "src/utils/isvalid.test.ts",
+        "src/utils/network.test.ts",
+        "src/utils/network.update.test.ts",
+        "src/utils/network.version.test.ts",
+        "src/utils/spawn.test.ts",
+        "src/utils/tracker.test.ts",
+        "src/utils/utils.test.ts",
+        "src/utils/wait.test.ts",
       ],
       "group": {
         "kind": "test",
@@ -292,8 +297,7 @@
         "--verbose",
         "--coverage",
         "--maxWorkers=100%",
-        "src/workers/cpuUsage.test.ts",
-        "src/workers/memoryUsage.test.ts"
+        "src/broadcastServer.test.ts",
       ],
       "group": { "kind": "test", "isDefault": false },
       "problemMatcher": []
