--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "matterbridge",
-  "version": "3.3.5",
+  "version": "3.3.6",
   "description": "Matterbridge plugin manager for Matter",
   "author": "https://github.com/Luligu",
   "license": "Apache-2.0",
@@ -164,28 +164,29 @@
   "devDependencies": {
     "@eslint/js": "9.38.0",
     "@jest/globals": "30.2.0",
-    "@types/archiver": "6.0.4",
-    "@types/express": "5.0.4",
+    "@types/archiver": "7.0.0",
+    "@types/express": "5.0.5",
     "@types/jest": "30.0.0",
     "@types/multer": "2.0.0",
-    "@types/node": "24.9.1",
+    "@types/node": "24.9.2",
     "@types/ws": "8.18.1",
-    "@vitest/coverage-v8": "4.0.3",
-    "@vitest/eslint-plugin": "1.3.24",
+    "@vitest/coverage-v8": "4.0.6",
+    "@vitest/eslint-plugin": "1.4.0",
+    "eslint": "9.38.0",
     "eslint-config-prettier": "10.1.8",
     "eslint-plugin-import": "2.32.0",
     "eslint-plugin-jest": "29.0.1",
-    "eslint-plugin-jsdoc": "61.1.7",
+    "eslint-plugin-jsdoc": "61.1.11",
     "eslint-plugin-n": "17.23.1",
     "eslint-plugin-prettier": "5.5.4",
     "eslint-plugin-promise": "7.2.1",
     "jest": "30.2.0",
-    "npm-check-updates": "19.1.1",
+    "npm-check-updates": "19.1.2",
     "prettier": "3.6.2",
     "shx": "0.4.0",
     "ts-jest": "29.4.5",
     "typescript": "5.9.3",
     "typescript-eslint": "8.46.2",
-    "vitest": "4.0.3"
+    "vitest": "4.0.6"
   }
 }
