--- a/package.json
+++ b/package.json
@@ -108,6 +108,7 @@
     "buildProduction": "tsc --project tsconfig.production.json",
     "cleanBuild": "npx shx rm -rf tsconfig.tsbuildinfo dist && npm run build",
     "cleanBuildProduction": "npx shx rm -rf tsconfig.tsbuildinfo dist && npm run buildProduction",
+    "fetch:chip": "node scripts/fetch-chip.mjs",
     "watch": "tsc --watch",
     "start": "node ./dist/cli.js",
     "start:bridge": "node ./dist/cli.js --bridge",
