--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -177,6 +177,7 @@
         "--coverage",
         "--maxWorkers=100%",
         "matterbridgePlatform.test.ts",
+        "matterbridgePlatform.active.test.ts",
         "matterbridgeAccessoryPlatform.test.ts",
         "matterbridgeDynamicPlatform.test.ts"
       ],
