--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -301,7 +301,11 @@
         "--coverage",
         "--maxWorkers=100%",
         "src/broadcastServer.test.ts",
-        "src/matter.test.ts",
+        "src/matterNode.test.ts",
+        "src/matterNode.bridge.test.ts",
+        "src/matterNode.accessory.test.ts",
+        "src/matterNode.dynamic.test.ts",
+        "src/matterNode.server.test.ts",
       ],
       "group": { "kind": "test", "isDefault": false },
       "problemMatcher": []
