--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "matterbridge",
-  "version": "3.4.0",
+  "version": "3.4.1",
   "description": "Matterbridge plugin manager for Matter",
   "author": "https://github.com/Luligu",
   "license": "Apache-2.0",
@@ -118,7 +118,7 @@
     "start:tracegc": "node --expose_gc --trace_gc ./dist/cli.js --debug --trace --loader",
     "start:tracegcverbose": "node --expose_gc --trace_gc_verbose ./dist/cli.js --debug --trace --loader",
     "test": "node --no-warnings --experimental-vm-modules node_modules/jest/bin/jest.js --maxWorkers=100%",
-    "test:coverage": "node --no-warnings --experimental-vm-modules node_modules/jest/bin/jest.js --coverage --maxWorkers=100%",
+    "test:coverage": "node --no-warnings --experimental-vm-modules node_modules/jest/bin/jest.js --coverage --coverageThreshold=\"{ \\\"global\\\": { \\\"lines\\\": 100 } }\" --maxWorkers=100%",
     "test:verbose": "node --no-warnings --experimental-vm-modules node_modules/jest/bin/jest.js --verbose --maxWorkers=100%",
     "test:watch": "node --no-warnings --experimental-vm-modules node_modules/jest/bin/jest.js --watch --maxWorkers=100%",
     "test:vitest": "vitest run",
@@ -160,7 +160,7 @@
     "@matter/main": "0.15.6",
     "archiver": "7.0.1",
     "express": "5.1.0",
-    "glob": "11.0.3",
+    "glob": "13.0.0",
     "multer": "2.0.2",
     "node-ansi-logger": "3.1.1",
     "node-persist-manager": "2.0.0",
@@ -175,13 +175,13 @@
     "@types/multer": "2.0.0",
     "@types/node": "24.10.1",
     "@types/ws": "8.18.1",
-    "@vitest/coverage-v8": "4.0.9",
-    "@vitest/eslint-plugin": "1.4.3",
+    "@vitest/coverage-v8": "4.0.14",
+    "@vitest/eslint-plugin": "1.5.0",
     "eslint": "9.39.1",
     "eslint-config-prettier": "10.1.8",
     "eslint-plugin-import": "2.32.0",
-    "eslint-plugin-jest": "29.1.0",
-    "eslint-plugin-jsdoc": "61.2.1",
+    "eslint-plugin-jest": "29.2.1",
+    "eslint-plugin-jsdoc": "61.4.1",
     "eslint-plugin-n": "17.23.1",
     "eslint-plugin-prettier": "5.5.4",
     "eslint-plugin-promise": "7.2.1",
@@ -191,7 +191,7 @@
     "shx": "0.4.0",
     "ts-jest": "29.4.5",
     "typescript": "5.9.3",
-    "typescript-eslint": "8.46.4",
-    "vitest": "4.0.9"
+    "typescript-eslint": "8.48.0",
+    "vitest": "4.0.14"
   }
 }
