--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,7 +10,7 @@
   "eslint.trace.server": "off",
   "eslint.workingDirectories": [
     { "directory": "./", "changeProcessCWD": true },
-    { "directory": "./frontend", "changeProcessCWD": true },
+    { "directory": "./frontend", "changeProcessCWD": true }
   ],
   "editor.tabSize": 2
 }
