--- a/src/mock/plugintest/package.json
+++ b/src/mock/plugintest/package.json
@@ -1,1 +1,8 @@
-{"name":"test","type":"module","main":"index.js","version":"1.0.0","description":"To update","author":"To update"}
+{
+  "name": "test",
+  "type": "module",
+  "main": "index.js",
+  "version": "1.0.0",
+  "description": "To update",
+  "author": "To update"
+}
