Add marked script

--- a/package.json
+++ b/package.json
@@ -149,7 +149,7 @@
     "updateMatter:dev": "npm install --save-exact @matter/main@dev && npm install && npm run reset",
     "updateMatter:loc": "npm install ../matter.js/packages/matter.js && npm install && npm run reset",
     "install:dependencies": "npm install --save-exact @matter/main archiver express glob multer node-ansi-logger node-persist-manager ws",
-    "install:scripts": "npm install --save-dev --save-exact npm-check-updates shx",
+    "install:scripts": "npm install --save-dev --save-exact npm-check-updates shx marked",
     "install:typescript": "npm install --save-dev --save-exact typescript @types/node @types/express @types/ws",
     "install:eslint": "npm install --save-dev --save-exact eslint @eslint/js typescript-eslint eslint-plugin-import eslint-plugin-n eslint-plugin-promise eslint-plugin-jsdoc",
     "install:jest": "npm install --save-dev --save-exact jest ts-jest @types/jest @jest/globals eslint-plugin-jest",
@@ -186,6 +186,7 @@
     "eslint-plugin-prettier": "5.5.4",
     "eslint-plugin-promise": "7.2.1",
     "jest": "30.2.0",
+    "marked": "15.0.11",
     "npm-check-updates": "19.1.2",
     "prettier": "3.7.4",
     "shx": "0.4.0",
