--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "matterbridge",
-  "version": "3.4.2",
+  "version": "3.4.3",
   "description": "Matterbridge plugin manager for Matter",
   "author": "https://github.com/Luligu",
   "license": "Apache-2.0",
-  "homepage": "https://github.com/Luligu/matterbridge/blob/main/README.md",
+  "homepage": "https://matterbridge.io/",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Luligu/matterbridge.git"
@@ -137,6 +137,7 @@
     "git:hardreset:dev": "git fetch origin && git checkout dev && git reset --hard origin/dev",
     "git:hardreset:edge": "git fetch origin && git checkout edge && git reset --hard origin/edge",
     "runMeBeforePublish": "npm run lint && npm run format && npm run build && npm run test",
+    "updateHtmls": "node ./scripts/marked.mjs",
     "prepublishOnly": "npm pkg delete devDependencies scripts && npx shx rm -rf node_modules/* node_modules/.[!.]* node_modules/..?* && npm install --omit=dev && npm shrinkwrap",
     "prepublishOnlyProduction": "npm run cleanBuildProduction && npm pkg delete devDependencies scripts types && npx shx rm -rf node_modules/* node_modules/.[!.]* node_modules/..?* && npm install --omit=dev && npm shrinkwrap",
     "npmPack": "npx shx cp package.json package.json.backup && npm run prepublishOnlyProduction && npm pack && npx shx cp package.json.backup package.json && npx shx rm -rf package.json.backup && npm run reset",
@@ -149,7 +150,7 @@
     "updateMatter:dev": "npm install --save-exact @matter/main@dev && npm install && npm run reset",
     "updateMatter:loc": "npm install ../matter.js/packages/matter.js && npm install && npm run reset",
     "install:dependencies": "npm install --save-exact @matter/main archiver express glob multer node-ansi-logger node-persist-manager ws",
-    "install:scripts": "npm install --save-dev --save-exact npm-check-updates shx",
+    "install:scripts": "npm install --save-dev --save-exact npm-check-updates shx marked",
     "install:typescript": "npm install --save-dev --save-exact typescript @types/node @types/express @types/ws",
     "install:eslint": "npm install --save-dev --save-exact eslint @eslint/js typescript-eslint eslint-plugin-import eslint-plugin-n eslint-plugin-promise eslint-plugin-jsdoc",
     "install:jest": "npm install --save-dev --save-exact jest ts-jest @types/jest @jest/globals eslint-plugin-jest",
@@ -159,7 +160,7 @@
   "dependencies": {
     "@matter/main": "0.15.6",
     "archiver": "7.0.1",
-    "express": "5.1.0",
+    "express": "5.2.1",
     "glob": "13.0.0",
     "multer": "2.0.2",
     "node-ansi-logger": "3.1.1",
@@ -170,12 +171,12 @@
     "@eslint/js": "9.39.1",
     "@jest/globals": "30.2.0",
     "@types/archiver": "7.0.0",
-    "@types/express": "5.0.5",
+    "@types/express": "5.0.6",
     "@types/jest": "30.0.0",
     "@types/multer": "2.0.0",
     "@types/node": "24.10.1",
     "@types/ws": "8.18.1",
-    "@vitest/coverage-v8": "4.0.14",
+    "@vitest/coverage-v8": "4.0.15",
     "@vitest/eslint-plugin": "1.5.1",
     "eslint": "9.39.1",
     "eslint-config-prettier": "10.1.8",
@@ -186,12 +187,13 @@
     "eslint-plugin-prettier": "5.5.4",
     "eslint-plugin-promise": "7.2.1",
     "jest": "30.2.0",
+    "marked": "15.0.11",
     "npm-check-updates": "19.1.2",
-    "prettier": "3.7.3",
+    "prettier": "3.7.4",
     "shx": "0.4.0",
-    "ts-jest": "29.4.5",
+    "ts-jest": "29.4.6",
     "typescript": "5.9.3",
-    "typescript-eslint": "8.48.0",
-    "vitest": "4.0.14"
+    "typescript-eslint": "8.48.1",
+    "vitest": "4.0.15"
   }
 }
