Add Log search with case-insensitive regex

--- a/package.json
+++ b/package.json
@@ -118,7 +118,7 @@
     "start:tracegc": "node --expose_gc --trace_gc ./dist/cli.js --debug --trace --loader",
     "start:tracegcverbose": "node --expose_gc --trace_gc_verbose ./dist/cli.js --debug --trace --loader",
     "test": "node --no-warnings --experimental-vm-modules node_modules/jest/bin/jest.js --maxWorkers=100%",
-    "test:coverage": "node --no-warnings --experimental-vm-modules node_modules/jest/bin/jest.js --coverage --coverageThreshold=\"{ \\\"global\\\": { \\\"lines\\\": 100 } }\" --maxWorkers=100%",
+    "test:coverage": "node --no-warnings --experimental-vm-modules node_modules/jest/bin/jest.js --coverage --maxWorkers=100% --coverageThreshold=\"{ \\\"global\\\": { \\\"lines\\\": 100 } }\"",
     "test:verbose": "node --no-warnings --experimental-vm-modules node_modules/jest/bin/jest.js --verbose --maxWorkers=100%",
     "test:watch": "node --no-warnings --experimental-vm-modules node_modules/jest/bin/jest.js --watch --maxWorkers=100%",
     "test:vitest": "vitest run",
