--- a/.prettierignore
+++ b/.prettierignore
@@ -10,6 +10,7 @@ node_modules/
 
 # Ignore specific files
 **/*.html
+docker-compose.yml
 
 # Package specific directories and files that should be ignored
 frontend
