--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,16 +1,13 @@
 {
-  "eslint.format.enable": true,
+  "editor.tabSize": 2,
   "editor.formatOnSave": true,
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": "explicit"
   },
-  "eslint.codeActionsOnSave.rules": null,
-  "terminal.integrated.scrollback": 10000,
+  "eslint.format.enable": true,
   "eslint.useFlatConfig": true,
-  "eslint.trace.server": "off",
   "eslint.workingDirectories": [
     { "directory": "./", "changeProcessCWD": true },
     { "directory": "./frontend", "changeProcessCWD": true }
-  ],
-  "editor.tabSize": 2
+  ]
 }
