Try Dev Container with network host or ports

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,6 @@
 // .devcontainer/devcontainer.json
-// This file defines the development container configuration for a Matterbridge project.
-// WARNING: since the dev container doesn't have network host and ipv6, you can run matterbridge inside the container and test it but is not possible to pair the Matterbridge instance.
+// This file defines the development container configuration for Matterbridge.
+// WARNING: since the dev container doesn't have network host, you can run matterbridge inside the container and test it but is not possible to pair the Matterbridge instance.
 {
   // Name of the dev container
   "name": "Matterbridge",
@@ -8,27 +8,53 @@
   "image": "mcr.microsoft.com/vscode/devcontainers/typescript-node:latest",
   // Mount the local matterbridge and node_modules workspace folder to the container's workspace volumes to improve performance
   "mounts": ["source=${localWorkspaceFolderBasename}-node_modules,target=${containerWorkspaceFolder}/node_modules,type=volume"],
-  /* At the moment not working in WSL 2
+  /*
   "runArgs": [
     // Use the host's network to allow Matterbridge to communicate with other devices on the network
+    // At the moment not working in WSL 2 because of lack of support for host networking mode.
     "--network=host"
   ],
   */
   // On startup, update npm, pnpm, install the dev of matterbridge and install the dependencies from package.json
-  "postCreateCommand": "echo '1 - Installing updates ...' && sudo npm install -g npm@latest pnpm@latest npm-check-updates shx && echo '2 - Setting permissions ...' && sudo chown -R node:node . && echo '3 - Building the package ...' && npm install && npm run build && npm outdated || true",
-  // Give the Docker container the same name as the repository (must be unique on host)
-  "runArgs": ["--name", "${localWorkspaceFolderBasename}"],
+  "postCreateCommand": "echo '1 - Installing updates ...' && sudo npm install -g npm@latest npm-check-updates shx && echo '2 - Setting permissions ...' && sudo chown -R node:node . && echo '3 - Building the package ...' && npm install && npm run build && npm outdated || true && npm link && echo '4 - Setup completed!'",
+    // Give the Docker container the same name as the repository (must be unique on host)
+    // Publish Matterbridge and Matter port for both TCP and UDP.
+    // At the moment not working in WSL 2 because of lack of support for host networking mode.
+    "runArgs": [
+      "--name",
+      "${localWorkspaceFolderBasename}",
+      "-p",
+      "0.0.0.0:5353:5353/udp",
+      "-p",
+      "[::]:5353:5353/udp",
+      "-p",
+      "0.0.0.0:5540:5540/tcp",
+      "-p",
+      "[::]:5540:5540/tcp",
+      "-p",
+      "0.0.0.0:5540:5540/udp",
+      "-p",
+      "[::]:5540:5540/udp",
+      "-p",
+      "0.0.0.0:8283:8283/tcp",
+      "-p",
+      "[::]:8283:8283/tcp"
+    ],
   "customizations": {
     "vscode": {
       // Extensions to install in the dev container
-      "extensions": ["ms-vscode.vscode-typescript-next", "ms-azuretools.vscode-containers", "dbaeumer.vscode-eslint", "esbenp.prettier-vscode", "github.vscode-github-actions", "github.vscode-pull-request-github"],
+      "extensions": ["ms-vscode.vscode-typescript-next", "ms-azuretools.vscode-containers", "dbaeumer.vscode-eslint", "esbenp.prettier-vscode", "github.copilot-chat", "github.vscode-github-actions", "github.vscode-pull-request-github"],
       // Settings for the VS Code environment
       "settings": {
-        "eslint.format.enable": true,
-        "eslint.useFlatConfig": true,
-        "editor.formatOnSave": true,
         "terminal.integrated.shell.linux": "/bin/bash",
-        "terminal.integrated.scrollback": 10000
+        "terminal.integrated.scrollback": 10000,
+        "editor.tabSize": 2,
+        "editor.formatOnSave": true,
+        "editor.codeActionsOnSave": {
+          "source.fixAll.eslint": "explicit"
+        },
+        "eslint.format.enable": true,
+        "eslint.useFlatConfig": true
       }
     }
   }
