--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -8,38 +8,42 @@
   "image": "mcr.microsoft.com/vscode/devcontainers/typescript-node:latest",
   // Mount the local matterbridge and node_modules workspace folder to the container's workspace volumes to improve performance
   "mounts": ["source=${localWorkspaceFolderBasename}-node_modules,target=${containerWorkspaceFolder}/node_modules,type=volume"],
+  // On startup, update npm, pnpm, install the dev of matterbridge and install the dependencies from package.json
+  "postCreateCommand": "echo '1 - Installing updates ...' && sudo npm install -g npm@latest npm-check-updates shx && echo '2 - Setting permissions ...' && sudo chown -R node:node . && echo '3 - Building the package ...' && npm install && npm run build && npm outdated || true && npm link && echo '4 - Setup completed!'",
+  "runArgs": [
+    // Give the Docker container the same name as the repository (must be unique on host)
+    "--name",
+    "${localWorkspaceFolderBasename}",
+  ],
   /*
   "runArgs": [
-    // Use the host's network to allow Matterbridge to communicate with other devices on the network
-    // At the moment not working in WSL 2 because of lack of support for host networking mode.
+    // At the moment not working in Docker Desktop on WSL 2 because of lack of support for host networking mode.
     "--network=host"
   ],
   */
-  // On startup, update npm, pnpm, install the dev of matterbridge and install the dependencies from package.json
-  "postCreateCommand": "echo '1 - Installing updates ...' && sudo npm install -g npm@latest npm-check-updates shx && echo '2 - Setting permissions ...' && sudo chown -R node:node . && echo '3 - Building the package ...' && npm install && npm run build && npm outdated || true && npm link && echo '4 - Setup completed!'",
-    // Give the Docker container the same name as the repository (must be unique on host)
-    // Publish Matterbridge and Matter port for both TCP and UDP.
-    // At the moment not working in WSL 2 because of lack of support for host networking mode.
-    "runArgs": [
-      "--name",
-      "${localWorkspaceFolderBasename}",
-      "-p",
-      "0.0.0.0:5353:5353/udp",
-      "-p",
-      "[::]:5353:5353/udp",
-      "-p",
-      "0.0.0.0:5540:5540/tcp",
-      "-p",
-      "[::]:5540:5540/tcp",
-      "-p",
-      "0.0.0.0:5540:5540/udp",
-      "-p",
-      "[::]:5540:5540/udp",
-      "-p",
-      "0.0.0.0:8283:8283/tcp",
-      "-p",
-      "[::]:8283:8283/tcp"
-    ],
+  /*
+  // At the moment not working in Docker Desktop on WSL 2
+  "runArgs": [
+    "--name",
+    "${localWorkspaceFolderBasename}",
+    "-p",
+    "0.0.0.0:5353:5353/udp",
+    "-p",
+    "[::]:5353:5353/udp",
+    "-p",
+    "0.0.0.0:5540:5540/tcp",
+    "-p",
+    "[::]:5540:5540/tcp",
+    "-p",
+    "0.0.0.0:5540:5540/udp",
+    "-p",
+    "[::]:5540:5540/udp",
+    "-p",
+    "0.0.0.0:8283:8283/tcp",
+    "-p",
+    "[::]:8283:8283/tcp"
+  ],
+  */
   "customizations": {
     "vscode": {
       // Extensions to install in the dev container
