Refactor devcontainer.json to improve postCreateCommand clarity and remove unnecessary comments

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -8,12 +8,12 @@
   "image": "mcr.microsoft.com/vscode/devcontainers/typescript-node:latest",
   // Mount the local matterbridge and node_modules workspace folder to the container's workspace volumes to improve performance
   "mounts": ["source=${localWorkspaceFolderBasename}-node_modules,target=${containerWorkspaceFolder}/node_modules,type=volume"],
-  // On startup, update npm, pnpm, install the dev of matterbridge and install the dependencies from package.json
-  "postCreateCommand": "echo '1 - Installing updates ...' && sudo npm install -g npm@latest npm-check-updates shx && echo '2 - Setting permissions ...' && sudo chown -R node:node . && echo '3 - Building the package ...' && npm install && npm run build && npm outdated || true && npm link && echo '4 - Setup completed!'",
+  // On startup, update npm, build matterbridge and link it globally
+  "postCreateCommand": "echo '1 - Installing updates ...' && sudo npm install -g npm npm-check-updates shx && echo '2 - Setting permissions ...' && sudo chown -R node:node . && echo '3 - Building the package ...' && npm install && npm run build && npm outdated || true && npm link && echo '4 - Setup completed!'",
   "runArgs": [
     // Give the Docker container the same name as the repository (must be unique on host)
     "--name",
-    "${localWorkspaceFolderBasename}",
+    "${localWorkspaceFolderBasename}"
   ],
   /*
   "runArgs": [
