--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,14 +3,23 @@
 // This file defines the development container configuration for Matterbridge.
 
 /* 
-  ************************************************* WARNING *************************************************
-  Dev containers have certain networking limitations depending on the host operating system and Docker setup.
-  When using Docker Desktop on Windows or macOS, the dev container cannot use host networking mode cause 
-  Docker Desktop runs inside a VM and not directly on the host.
-  In that case, you can still run and test matterbridge inside the container, but pairing with other services
-  that require network access will not work.
-  It works fine on native Linux hosts or WSL 2 with Docker engine CLI integration.
-  ************************************************* WARNING *************************************************
+************************************************* WARNING *************************************************
+Dev containers have networking limitations depending on the host OS and Docker setup.
+
+• Docker Desktop on Windows or macOS:
+  - Runs inside a VM
+  - Host networking mode is NOT available and mDNS is not supported
+  - Matterbridge and plugins can run but:
+    ❌ Pairing with Matter controllers will NOT work cause of missing mDNS support
+    ✅ Remote and local network access (cloud services, internet APIs) works normally
+    ✅ Matterbridge frontend works normally
+
+• Native Linux or WSL 2 with Docker Engine CLI integration:
+  - Host networking IS available
+  - Full local network access is supported
+  - Matterbridge and plugins work correctly, including pairing
+  - Matterbridge frontend works normally
+************************************************* WARNING *************************************************
 */
 {
   // Name of the dev container
